# analysis-giorgio-2

./: .hgignore  .hgignore.orig  Fraser_flow  Sprint.ipynb  Untitled.ipynb
MEOPAR/Ariane/ariane-2.2.6_00/: COPYING  Makefile  Makefile.in  config.status  configure  configure.ac
MEOPAR/Ariane/ariane-2.2.6_00/doc/: Makefile  Makefile.am  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/doc/manuals/: Makefile  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/doc/src_browser/: Makefile  Makefile.am  Makefile.in  README  log.html  subject_index.html
MEOPAR/Ariane/ariane-2.2.6_00/doc/src_browser/call_from/: ARIANE.html  CRITER1.html  FX.html  FY.html  MOD_CRITER1.html  MOD_CST.html  MOD_FLAGS.html  MOD_FY.html  MOD_FZ.html  MOD_INIT_PARTICULES.html  MOD_INPUT_DATA_MAIN.html  MOD_INPUT_DATA_SEQ.html  MOD_INPUT_GRID.html  MOD_LUN.html  MOD_MEMORY.html  MOD_NAMELIST.html  MOD_NETCDF_OUTPUT.html  MOD_ORCA.html  MOD_OUTPUT_DATA.html  MOD_PARAM.html  MOD_POSIN.html  MOD_RHOSTP.html  MOD_SAVE_NETCDF.html  MOD_SEQ.html  MOD_SIGMA.html  MOD_STATI.html  MOD_WHICH_TYPE.html  MOD_ZINTER.html  Makefile  Makefile.am  Makefile.in  POSINI_SEQ.html  SIGMA.html  SUB_B2C_GRID_SAVE_U.html  SUB_B2C_GRID_SAVE_U_SEQ.html  SUB_B2C_GRID_SAVE_W_SEQ.html  SUB_FLAGS_ALLOC.html  SUB_FLAGS_DEALLOC.html  SUB_H_ROMS_DEALLOC.html  SUB_INPUT_APPROX_ZZ_WW_ROMS.html  (+46 more)
MEOPAR/Ariane/ariane-2.2.6_00/doc/src_browser/call_to/: ARIANE.html  CRITER0.html  CRITER1.html  FX.html  MOD_B2C_GRID_INTERPOLATION.html  MOD_CST.html  MOD_INPUT_DATA_SEQ.html  MOD_MEMORY.html  MOD_NAMELIST.html  MOD_NETCDF_OUTPUT.html  MOD_OUTPUT_DATA.html  MOD_PRECISION.html  MOD_REDUCMEM.html  MOD_SAVE_NETCDF.html  MOD_SEQ.html  MOD_STATI.html  MOD_TRAJEC_SUBS.html  MOD_TXT.html  MOD_WHICH_TYPE.html  MOD_W_COMPUT.html  Makefile  Makefile.am  Makefile.in  PRG_ARIANE.html  RHOSTP.html  SIGMA.html  SUB_B2C_GRID_SAVE_U.html  SUB_B2C_GRID_SAVE_U_SEQ.html  SUB_BUILD_FILENAME.html  SUB_CLOSE_NETCDF_FILE.html  SUB_COORD_DEALLOC.html  SUB_FLAGS_ALLOC.html  SUB_H_ROMS_DEALLOC.html  SUB_I4_TYPE.html  SUB_INIT_PARTICULES_COMPUTE_MAXSECT_MAXSEGM.html  SUB_INIT_PARTICULES_POSITIONS.html  SUB_INIT_PART_MAXSECT_MAXSEGM.html  SUB_INPUT_APPROX_ZZ_WW_ROMS.html  SUB_INPUT_B2C_GRIDZ.html  SUB_INPUT_DATA.html  (+80 more)
MEOPAR/Ariane/ariane-2.2.6_00/doc/src_browser/gif/: Makefile  Makefile.am  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/doc/src_browser/html_code/: Makefile  Makefile.am  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/doc/src_browser/ind/: Makefile  Makefile.am  Makefile.in  TRAJEC_tree.html  ariane_index.html
MEOPAR/Ariane/ariane-2.2.6_00/examples/: Makefile  Makefile.am  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/examples/IDL/: Makefile  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/examples/Matlab/: 00_README_00  Makefile  Makefile.am  Makefile.in  a_traj_all.m  a_traj_dens.m  a_traj_salt.m
MEOPAR/Ariane/ariane-2.2.6_00/examples/Matlab/bg_routines/: Makefile  Makefile.in  a_compute_psi.m  a_fig_psi_salt.m  a_ncga_opa.m  a_ncglobatt.m  a_ncrg_opa.m  a_readsec.m  a_xy0.m
MEOPAR/Ariane/ariane-2.2.6_00/examples/OPA/: Makefile  Makefile.in  namelist_quali_backward  namelist_quali_backward_seq  namelist_quali_forward_seq  namelist_quant_backward  namelist_quant_backward_seq  namelist_quant_forward_seq
MEOPAR/Ariane/ariane-2.2.6_00/examples/ROMS/: Makefile  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/examples/data/: Makefile  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/examples/qualitative/: Makefile  Makefile.am  Makefile.in  go.sh
MEOPAR/Ariane/ariane-2.2.6_00/examples/qualitative/validation/: Makefile  Makefile.in  ariane_trajectories_qualitative.nc
MEOPAR/Ariane/ariane-2.2.6_00/examples/quantitative/: Makefile  Makefile.am  Makefile.in  namelist
MEOPAR/Ariane/ariane-2.2.6_00/examples/quantitative/validation/: Makefile  Makefile.in  final_pos.txt
MEOPAR/Ariane/ariane-2.2.6_00/examples/shell_scripts/: Makefile  Makefile.in  subset_reach_sections.sh
MEOPAR/Ariane/ariane-2.2.6_00/src/: Makefile  Makefile.in
MEOPAR/Ariane/ariane-2.2.6_00/src/tools/: Makefile  Makefile.am  Makefile.in  mkseg  mkseg.f90  mkseg0  mkseg0.f90.orig  mod_input_data_main.mod  mod_input_grid.mod  mod_lun.mod  mod_memory.mod  mod_namelist.mod  mod_netcdf.mod  mod_precision.mod  mod_reducmem.mod  mod_region_ind.f90  mod_region_ind.mod  mod_seq.mod  test_data_and_mask_consistency  test_data_and_mask_consistency.f90.orig
analysis-giorgio-2/notebooks/: 2016plots_50d_perparticle.ipynb  2016plots_50d_season.ipynb  2016plots_5d_perparticle.ipynb  create_longinpos.py  ex_2016_allmonths_1d.py  monthsplot.py  plotind.py  runapril.py  runaug.py  runmay.py  start_runs.py  yearplots-Copy1.ipynb
notebook_public/: 2016plots_50d.ipynb  README.md
notebooks/: 200days.py  200days2.py  2016plots_100d_perdepth.ipynb  2016plots_100d_season.ipynb  2016plots_365d_perdepth.ipynb  2016plots_50d_perdepth.ipynb  2016plots_50d_season.ipynb  Untitled.ipynb  aug_100d.py  bigfilesfix-Copy1.ipynb  bigfilesfix.ipynb  create_dirs.py  create_dirs_new.py  create_namelist.py  ex_2016_allmonths_28d.py  feb2.py  lastplotposter.py  link_vels.py  main.py  main_test.py  make_readme.py  plotseq.py  pltposter  pltposter.py  run_ariane.py  run_semester2.py  runfeb.py  runjan.py  runjan_elise.py  runjun.py  runmar.py  start_runsnew.py  start_runsnew2.py  test_yesterday.py  testingmore.py
notebooks_public/: 2016plots_100d.ipynb  2016plots_100d_perdepth.ipynb  2016plots_100d_season.ipynb  2016plots_5d.ipynb  2016plots_depth_histograms_base(50).ipynb  2016plots_depth_histograms_base-Copy1.ipynb  2016plots_depth_histograms_base.ipynb  2016plots_forpresentation.ipynb  2016plots_perdepth_10.ipynb  2016plots_perdepth_100.ipynb  2016plots_perdepth_5.ipynb  2016plots_perdepth_50.ipynb  2016plots_season_base.ipynb  README.md  Untitled1.ipynb  jan10_2.npy  make_readme.py  save_selected_pts.ipynb
revised_notebooks/1create_repos_run_ariane/: create_dirs.py  create_dirs_new.py  create_inpos.py  create_namelist.py  highbactweekly.py  highbactweeklypy  (+10 more)
thalweg/: particleDensityAlongThalweg-25d.ipynb  particleDensityAlongThalweg-50d.ipynb
(+245 files in other folders)
